--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/Saikrishna1504/kernel_xiaomi_mt6785
-KERNEL_SOURCE_BRANCH=vic
+KERNEL_SOURCE=https://github.com/WuXing90/android_kernel_xiaomi_mt6785
+KERNEL_SOURCE_BRANCH=fourteen
 KERNEL_CONFIG=begonia_user_defconfig
 ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
 EXTRA_BUILD_COMMAND:LD=ld.lld CC=clang NM=llvm-nm OBJCOPY=llvm-objcopy
 DISABLE-LTO=false
-ENABLE_KERNELSU=false
-APPLY_KSU_PATCH=false
+ENABLE_KERNELSU=true
+APPLY_KSU_PATCH=true
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=true
 DISABLE_CC_WERROR=true
