--- a/config.env
+++ b/config.env
@@ -7,7 +7,7 @@ ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
 EXTRA_BUILD_COMMAND:LD=ld.lld CC=clang NM=llvm-nm OBJCOPY=llvm-objcopy
 DISABLE-LTO=false
-ENABLE_KERNELSU=true
+ENABLE_KERNELSU=false
 APPLY_KSU_PATCH=false
 ADD_KPROBES_CONFIG=true
 ADD_OVERLAYFS_CONFIG=true
