--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/blazerpaul15/kernel_xiaomi_mt6785
-KERNEL_SOURCE_BRANCH=15
+KERNEL_SOURCE=https://github.com/WuXing90/kernel_xiaomi_mt6785_a15
+KERNEL_SOURCE_BRANCH=vic
 KERNEL_CONFIG=begonia_user_defconfig
 ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
@@ -9,6 +9,6 @@ EXTRA_BUILD_COMMAND:LD=ld.lld CC=clang NM=llvm-nm OBJCOPY=llvm-objcopy
 DISABLE-LTO=false
 ENABLE_KERNELSU=false
 APPLY_KSU_PATCH=false
-ADD_KPROBES_CONFIG=true
-ADD_OVERLAYFS_CONFIG=true
-DISABLE_CC_WERROR=true
+ADD_KPROBES_CONFIG=false
+ADD_OVERLAYFS_CONFIG=false
+DISABLE_CC_WERROR=false
