--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/Nova-Kernels/kernel_xiaomi_mt6785
+KERNEL_SOURCE=https://github.com/WuXing90/android_kernel_xiaomi_mt6785_next
 KERNEL_SOURCE_BRANCH=fifteen
 KERNEL_CONFIG=begonia_user_defconfig
 ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
 EXTRA_BUILD_COMMAND:LD=ld.lld CC=clang NM=llvm-nm OBJCOPY=llvm-objcopy
 DISABLE-LTO=false
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=true
 APPLY_KSU_PATCH=false
-ADD_KPROBES_CONFIG=false
-ADD_OVERLAYFS_CONFIG=false
+ADD_KPROBES_CONFIG=true
+ADD_OVERLAYFS_CONFIG=true
 DISABLE_CC_WERROR=false
