--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ KERNEL_SOURCE_BRANCH=fifteen
 KERNEL_CONFIG=begonia_user_defconfig
 ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
-EXTRA_BUILD_COMMAND:LD=ld.lld CC=clang NM=llvm-nm OBJCOPY=llvm-objcopy
+EXTRA_BUILD_COMMAND:LD=ld.lld
 DISABLE-LTO=false
 ENABLE_KERNELSU=true
 APPLY_KSU_PATCH=false
