--- a/config.env
+++ b/config.env
@@ -6,9 +6,9 @@ KERNEL_CONFIG=begonia_user_defconfig
 ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
 EXTRA_BUILD_COMMAND:LD=ld.lld
-DISABLE-LTO=false
+DISABLE-LTO=true
 ENABLE_KERNELSU=true
 APPLY_KSU_PATCH=false
 ADD_KPROBES_CONFIG=true
 ADD_OVERLAYFS_CONFIG=true
-DISABLE_CC_WERROR=false
+DISABLE_CC_WERROR=true
